--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,7 +1,7 @@
 :root{
   --main-color: teal;
   --hover-color: rgb(7, 112, 182);
-  --text-color: width;
+  --text-color: wheat;
 }
 
 .nav-list{
@@ -10,14 +10,34 @@
 }
 .nav-list-item{
   display: inline-block;
+  position: relative;
   background-color: var(--main-color);
   color: var(--text-color);
   font-size: initial;
 }
-.nav-list-link:hover{
+.nav-list-item + .nav-list-item{
+  border-left: 1px solid wheat;
+}
+.nav-list-item:hover{
   background-color: var(--hover-color);
 }
 .nav-list-link{
-  display: inline-block;
+  display: block;
   padding: 1em 1.5em;
+}
+.sub-nav-list{
+  /* display: none; */
+  position: absolute;
+  left: 0;
+  right: 0;
+}
+.nav-list-item:hover .sub-nav-list{
+  display: block;
+}
+.sub-nav-list-item{
+  display: block
+}
+
+section{
+  margin-top: 20px;
 }
