--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -26,16 +26,22 @@
   padding: 1em 1.5em;
 }
 .sub-nav-list{
-  /* display: none; */
+   display: none; 
   position: absolute;
   left: 0;
   right: 0;
 }
-.nav-list-item:hover .sub-nav-list{
+.nav-list-item:hover > .sub-nav-list{
   display: block;
 }
 .sub-nav-list-item{
   display: block
+}
+.sub-nav-list .sub-nav-list{
+  width: 100%;
+  position: absolute;
+  left: 100%;
+  top:0;
 }
 
 section{
